fix to_list()